--- a/app/src/main/res/layout/item_main_grid_recipe.xml
+++ b/app/src/main/res/layout/item_main_grid_recipe.xml
@@ -17,11 +17,16 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_description"
-                android:layout_below="@+id/image_recipe"
+                android:id="@+id/tv_dish_description"
                 android:layout_alignParentLeft="true"
-                android:layout_margin="16dp"
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                android:layout_below="@+id/tv_dish_type"
+                android:textColor="@color/base_dark"
+                android:text="some empty description, this was setted from xml"
+                android:paddingLeft="8dp"
+                android:paddingTop="8dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="8dp" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -30,7 +35,6 @@
                 android:layout_centerHorizontal="true"
                 android:scaleType="centerCrop"
                 android:src="#FF0000"
-                android:maxHeight="400dp"
                 android:adjustViewBounds="true"
                 android:layout_below="@+id/tv_dish_name" />
 
@@ -44,7 +48,134 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:background="#ff8521" />
+                android:background="#ff8521"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:id="@+id/image_calories"
+                android:layout_below="@+id/image_recipe"
+                android:layout_marginLeft="12dp"
+                android:src="@drawable/energy"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="2500 Kk"
+                android:id="@+id/tv_dish_calories"
+                android:layout_below="@+id/image_recipe"
+                android:layout_toRightOf="@+id/image_calories"
+                android:layout_toEndOf="@+id/image_calories"
+                android:gravity="center_vertical"
+                android:textSize="10sp"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/base_dark"
+                android:layout_marginLeft="4dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="15 min"
+                android:id="@+id/tv_dish_time"
+                android:gravity="center_vertical"
+                android:layout_below="@+id/image_recipe"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="12dp"
+                android:textSize="10sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="4dp" />
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:id="@+id/image_time"
+                android:src="@drawable/clock"
+                android:layout_below="@+id/image_recipe"
+                android:layout_alignParentRight="false"
+                android:layout_toLeftOf="@+id/tv_dish_time"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="HOT"
+                android:id="@+id/tv_dish_type"
+                android:gravity="center_vertical"
+                android:layout_toRightOf="@+id/image_dish_type"
+                android:layout_alignTop="@+id/image_dish_type"
+                android:textSize="10sp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="4dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:id="@+id/image_dish_type"
+                android:src="@drawable/utensil"
+                android:layout_below="@+id/image_calories"
+                android:layout_alignLeft="@+id/image_calories"
+                android:layout_marginTop="4dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_divider_height"
+                android:background="@color/base_dark"
+                android:layout_alignTop="@+id/tv_dish_description"></FrameLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_divider_height"
+                android:background="@color/white"
+                android:layout_alignBottom="@+id/tv_dish_name" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_divider_height"
+                android:background="@color/base_dark"
+                android:layout_alignBottom="@+id/tv_dish_description" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_user_avatar"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/test_photo"
+                android:layout_below="@+id/tv_dish_description"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="User Name"
+                android:id="@+id/tv_username"
+                android:layout_toRightOf="@+id/image_user_avatar"
+                android:layout_alignTop="@+id/image_user_avatar"
+                android:textSize="10sp"
+                android:layout_marginLeft="4dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="HOT COOK"
+                android:id="@+id/tv_user_status"
+                android:textSize="8sp"
+                android:layout_below="@+id/tv_username"
+                android:layout_toRightOf="@+id/image_user_avatar"
+                android:layout_toEndOf="@+id/image_user_avatar"
+                android:layout_marginLeft="4dp" />
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
