--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#F57F17</color>
+    <color name="colorAccent">#F57F17</color>
+    <color name="background">#F0F0F0</color>
+    <color name="write">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
