--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:id="@+id/coordinator">
 
         <android.support.design.widget.AppBarLayout
@@ -26,6 +25,7 @@
                 android:background="?attr/colorPrimary"
                 android:titleTextColor="@color/black"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:layout_scrollFlags="scroll|enterAlways"
                 />
 
         </android.support.design.widget.AppBarLayout>
