--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -20,12 +20,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:padding="15dp">
+            android:layout_marginRight="4dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="4dp">
 
             <ImageView
                 android:id="@+id/iv_line"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/default_divider_height"
                 android:background="@color/main_dark" />
 
             <LinearLayout
@@ -34,23 +38,26 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_line"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="4dp">
 
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="16dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/clock" />
+                    android:src="@drawable/energy" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:text="2500Kk" />
+                    android:text="2500Kk"
+                    android:textSize="12sp" />
 
                 <ImageView
                     android:id="@+id/imageView6"
@@ -64,21 +71,23 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:text="15 min" />
+                    android:text="15 min"
+                    android:textSize="12sp" />
 
                 <ImageView
                     android:id="@+id/imageView7"
                     android:layout_width="16dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/clock" />
+                    android:src="@drawable/utensil" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:text="Hot" />
+                    android:text="Hot"
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <TextView
@@ -86,76 +95,108 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ll_Text"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:text="I have never gotten so many compliments before, let alone for a piece of chicken. David suggested calling this chicken, &quot;So Good it Can&apos;t Be Described, Explosion on Your Taste Buds Chicken.&quot; Exactl... " />
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="I have never gotten so many compliments before, let alone for a piece of chicken. David suggested calling this chicken, &quot;So Good it Can&apos;t Be Described, Explosion on Your Taste Buds Chicken.&quot; Exactl... "
+                android:textSize="12sp" />
 
             <ImageView
                 android:id="@+id/iv_lineOne"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/default_divider_height"
                 android:layout_below="@+id/imageView"
                 android:background="@color/main_dark" />
 
-            <LinearLayout
-                android:id="@+id/ll_Text1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView"
-                android:foregroundGravity="center_vertical"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="2"
-                    android:text="Hot" />
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="16dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/clock" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="3"
-                    android:text="15" />
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="16dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/clock" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="3"
-                    android:text="2334" />
-            </LinearLayout>
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="@drawable/abc_btn_check_to_on_mtrl_015"
-                android:layout_below="@+id/tv_Info" />
+                android:layout_below="@+id/tv_Info"
+                android:src="@drawable/unfold"
+                android:paddingBottom="4dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/test_photo"
+                android:id="@+id/imageView10"
+                android:layout_alignTop="@+id/iv_lineOne"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="4dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="Vasyl Sherban"
+                android:id="@+id/tv_name"
+                android:layout_alignTop="@+id/iv_lineOne"
+                android:layout_toRightOf="@+id/imageView10"
+                android:layout_toEndOf="@+id/imageView10"
+                android:layout_marginTop="8dp"
+                android:textSize="12dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hot cook"
+                android:id="@+id/tv_cook"
+                android:layout_alignParentRight="false"
+                android:layout_toRightOf="@+id/imageView10"
+                android:layout_below="@+id/tv_name"
+                android:textSize="10dp" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/message"
+                android:layout_alignTop="@+id/imageView10"
+                android:layout_toLeftOf="@+id/tv_comment"
+                android:layout_marginRight="4dp"
+                android:layout_alignBottom="@+id/imageView10" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="15"
+                android:id="@+id/tv_comment"
+                android:layout_toLeftOf="@+id/imageView12"
+                android:layout_alignTop="@+id/imageView10"
+                android:gravity="center"
+                android:layout_alignBottom="@+id/imageView10"
+                android:textSize="12sp" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/like"
+                android:layout_alignTop="@+id/imageView10"
+                android:layout_toLeftOf="@+id/tv_like"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="4dp"
+                android:layout_alignBottom="@+id/imageView10" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="2334"
+                android:id="@+id/tv_like"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="false"
+                android:layout_alignTop="@+id/imageView10"
+                android:layout_alignParentBottom="false"
+                android:layout_alignWithParentIfMissing="false"
+                android:layout_alignBottom="@+id/imageView10"
+                android:gravity="center"
+                android:textSize="12sp" />
+
+
         </RelativeLayout>
 
         <android.support.v7.widget.CardView
