--- a/app/src/main/res/layout/item_main_grid_recipe.xml
+++ b/app/src/main/res/layout/item_main_grid_recipe.xml
@@ -114,7 +114,8 @@
                 android:textSize="10sp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="4dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_alignParentEnd="true" />
 
             <ImageView
                 android:layout_width="12dp"
